--- a/PCBM_driver_cpp.ioc
+++ b/PCBM_driver_cpp.ioc
@@ -219,6 +219,7 @@ ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
 RCC.VCOOutput2Freq_Value=8000000
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 RCC.APB2Freq_Value=72000000
 PA1.Mode=IN2-Single-Ended
