--- a/PCBM_driver_cpp.ioc
+++ b/PCBM_driver_cpp.ioc
@@ -63,7 +63,7 @@ ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
 Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PB6.Mode=Asynchronous
-SPI1.CalculateBaudRate=2.25 MBits/s
+SPI1.CalculateBaudRate=4.5 MBits/s
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 ADC1.SubFamily=STM32F303x8
@@ -153,7 +153,7 @@ TIM1.Period=1000
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.Request0=ADC2
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 PA4.GPIO_Label=U_I
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
@@ -172,7 +172,7 @@ PA15.GPIOParameters=GPIO_Label
 Mcu.PinsNb=26
 ADC2.Offset-3\#ChannelRegularConversion=0
 ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize,CLKPhase
 ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,EnableInjectedConversion,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,Offset-3\#ChannelRegularConversion,NbrOfConversion,ExternalTrigConv,DMAContinuousRequests,master,SubFamily
 TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -180,6 +180,7 @@ ADC2.Rank-3\#ChannelRegularConversion=2
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
 PA11.GPIO_Label=LED
 ProjectManager.DefaultFWLocation=true
+SPI1.CLKPhase=SPI_PHASE_2EDGE
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 ADC2.EnableRegularConversion=ENABLE
 ProjectManager.DeletePrevious=true
