--- a/PCBM_driver_cpp.ioc
+++ b/PCBM_driver_cpp.ioc
@@ -57,13 +57,13 @@ ProjectManager.PreviousToolchain=
 Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
 ADC1.Offset-1\#ChannelRegularConversion=0
 RCC.APB2TimFreq_Value=72000000
-TIM3.Period=10000
+TIM3.Period=7200-1
 PB6.Signal=USART1_TX
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_3
 Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 PB6.Mode=Asynchronous
-SPI1.CalculateBaudRate=4.5 MBits/s
+SPI1.CalculateBaudRate=9.0 MBits/s
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 ADC1.SubFamily=STM32F303x8
@@ -153,7 +153,7 @@ TIM1.Period=1000
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 Dma.Request0=ADC2
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
 PA4.GPIO_Label=U_I
 ProjectManager.CustomerFirmwarePackage=
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
